
Handle warnings/fatal errors if Debug.pm is loaded by printing a stack trace.
----------------------------------------------------------------------
Wed Mar 16 13:55:17 2011                        Michael Jennings (mej)

Refactor logging and debugging to be more flexible.

Flesh out syslog and alternative logging target handling.

Disable backtrace on warn/die invocation...too noisy for now.
----------------------------------------------------------------------
Wed Mar 16 16:24:36 2011                        Michael Jennings (mej)

Improve autogen.sh.
----------------------------------------------------------------------
Fri Mar 25 17:45:06 2011                        Michael Jennings (mej)

Object::get() in an array context now returns an empty array.
----------------------------------------------------------------------
Fri Jun  3 11:57:48 2011                        Michael Jennings (mej)

We don't compile anything, so don't use libtool or autoheader.

Clean up wwconfig.

Add support for --datarootdir to silence warnings from configure.
----------------------------------------------------------------------
Fri Jun  3 12:48:14 2011                        Michael Jennings (mej)

Oops.
----------------------------------------------------------------------
Fri Jun  3 13:06:00 2011                        Michael Jennings (mej)

Oops^2.
----------------------------------------------------------------------
Mon Jun  6 13:23:14 2011                        Michael Jennings (mej)

Compatibility for RHEL5 autoconf.
----------------------------------------------------------------------
Mon Jun  6 17:21:52 2011                        Michael Jennings (mej)

Ignore files cleaned by "make maintainer-clean"
----------------------------------------------------------------------
Mon Jul 18 15:49:53 2011                        Michael Jennings (mej)

Fix usage of svnversion since it no longer errors properly.
----------------------------------------------------------------------