@@ -21,7 +21,6 @@ use Getopt::Long;
 use File::Basename;
 use File::Path;
 use Text::ParseWords;
-use Digest::file qw(digest_file_hex);
 use POSIX;
 
 our @ISA = ('Warewulf::Module::Cli');
@@ -223,7 +222,7 @@ exec()
                     } else {
                         $name = basename($path);
                     }
-                    my $digest = digest_file_hex($path, "MD5");
+                    my $digest = digest_file_hex_md5($path);
                     $objectSet = $db->get_objects($entity_type, $opt_lookup, $name);
                     my @objList = $objectSet->get_list();
                     my ($dev,$ino,$mode,$nlink,$uid,$gid,$rdev,$size, $atime,$mtime,$ctime,$blksize,$blocks) = stat($path);
@@ -262,7 +261,7 @@ exec()
                         my $obj = Warewulf::DSOFactory->new("file");
                         $db->persist($obj);
                         $obj->set($opt_lookup, $name);
-                        $obj->set("checksum", digest_file_hex($path, "MD5"));
+                        $obj->set("checksum", digest_file_hex_md5($path));
                         my $binstore = $db->binstore($obj->get("_id"));
                         my $size;
                         my $buffer;
@@ -325,7 +324,7 @@ exec()
         $digest1 = $obj->get("checksum") || "";
         if ($program =~ /^"?([a-zA-Z0-9_\-\s\.\/]+?)"?$/) {
             if (system("$1 $tmpfile") == 0) {
-                $digest2 = digest_file_hex($tmpfile, "MD5");
+                $digest2 = digest_file_hex_md5($tmpfile);
                 if ($digest1 ne $digest2) {
                     my $binstore = $db->binstore($obj->get("_id"));
                     my $size;
