@@ -158,3 +158,7 @@ Mon Jul 18 15:49:53 2011                        Michael Jennings (mej)
 
 Fix usage of svnversion since it no longer errors properly.
 ----------------------------------------------------------------------
+Tue Jul 19 14:32:41 2011                        Michael Jennings (mej)
+
+Replace use of Digest::file with Digest::MD5.
+----------------------------------------------------------------------
